# aspect-gazelle

./: .bazelignore  .bazeliskrc  .bazelrc  .bazelversion  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  BUILD.bazel  MODULE.bazel  README.md  gazelle.bzl  go.mod  go.sum  go.work  go.work.sum
bazel/go/: BUILD.bazel  nogo.config.json  tools.go  write_go_generated_source_files.bzl
cli/core/bazel/: BUILD.bazel
cli/core/bazel/action_cache/: BUILD.bazel  action_cache.pb.go  action_cache_pb.d.ts
cli/core/bazel/analysis/: BUILD.bazel  analysis_v2.pb.go  analysis_v2.proto  analysis_v2_pb.d.ts
cli/core/bazel/buildeventstream/: BUILD.bazel  build_event_stream.pb.go  build_event_stream.proto  build_event_stream_pb.d.ts
cli/core/bazel/command_line/: BUILD.bazel  command_line.pb.go  command_line.proto  command_line_pb.d.ts
cli/core/bazel/failure_details/: BUILD.bazel  failure_details.pb.go  failure_details_pb.d.ts
cli/core/bazel/flags/: BUILD.bazel  flags.pb.go  flags_pb.d.ts
cli/core/bazel/invocation_policy/: BUILD.bazel  invocation_policy.pb.go  invocation_policy_pb.d.ts
cli/core/bazel/options/: BUILD.bazel  option_filters.pb.go  option_filters_pb.d.ts
cli/core/bazel/packages_metrics/: BUILD.bazel  package_load_metrics.pb.go  package_load_metrics_pb.d.ts
cli/core/bazel/query/: BUILD.bazel  build.pb.go  build_pb.d.ts
cli/core/gazelle/: BUILD.bazel  deps.bzl  main.go  orion-init.sh
cli/core/gazelle/bzl/: BUILD.bazel
cli/core/gazelle/common/: BUILD.bazel  rules.go  set.go  walk.go
cli/core/gazelle/host/: BUILD.bazel  README.md  builtin.go  config.go  configure.go  generate.go  host.go  resolver.go
cli/core/gazelle/js/: BUILD.bazel  config.go  configure.go  generate.go  language.go  resolve.go
cli/core/gazelle/kotlin/: BUILD.bazel  configure.go  generate.go  language.go  resolver.go
cli/core/gazelle/python/: BUILD.bazel
cli/core/gazelle/runner/: BUILD.bazel  go_deps.go  runner.go
cli/pro/gazelle/: BUILD.bazel  main.go  orion-init.sh
cli/pro/gazelle/host/: BUILD.bazel  PLUGINS.md  README.md  builtin.go  config.go  configure.go  directives.go  generate.go  (+2 more)
common/: BUILD.bazel  error.go  glob.go  glob_test.go  go.mod  go.sum  rules.go  set.go  set_test.go  walk.go  worker.go
common/bazel/: BUILD.bazel  bazel.go
common/bazel/workspace/: BUILD.bazel
common/buildinfo/: BUILD.bazel  build_info.go  build_info_test.go
common/cache/: BUILD.bazel  README.md  configurer.go  disk.go  watchman.go
common/ibp/: BUILD.bazel  client.go  protocol.go
common/logger/: BUILD.bazel  logger.go
common/progress/: BUILD.bazel
common/rule/: BUILD.bazel  attr.go  glob.go  rules.go
common/socket/: BUILD.bazel
common/starlark/: BUILD.bazel  eval.go  glob.go
common/starlark/stdlib/: BUILD.bazel  path.go
common/starlark/utils/: BUILD.bazel
common/treesitter/: BUILD.bazel  filters.go  parser.go  queries.go  query.go
common/watch/: BUILD.bazel  watch.go
language/host/: BUILD.bazel  builtin.go  config.go  configure.go  generate.go  host.go  resolver.go
language/host/plugin/: BUILD.bazel  plugin.star.go  queries.star.go  target.go  target.star.go
language/host/queries/: BUILD.bazel  ast.go  jq.go  queries.go  regex.go  yq.go
language/host/starzelle/: BUILD.bazel  plugin.go  sdk.go
language/host/tests/: BUILD.bazel
language/js/: BUILD.bazel  MODULE.bazel  README.md  config.go  configure.go  generate.go  generate_test.go  go.mod  go.sum  kinds.go  language.go  resolve.go  target.go
language/js/node/: BUILD.bazel  package.go  std_modules.go  std_modules.js  std_modules_list.go
language/js/parser/: BUILD.bazel  parser.go
language/js/pnpm/: BUILD.bazel  workspace.go
language/js/proto/: BUILD.bazel  proto.go
language/js/tests/: BUILD.bazel
language/js/typescript/: BUILD.bazel  config.go  tsconfig.go  tsconfig_test.go
language/kotlin/: BUILD.bazel  MODULE.bazel  README.md  configure.go  generate.go  go.mod  go.sum  imports.go  resolver.go
language/kotlin/kotlinconfig/: BUILD.bazel
language/kotlin/parser/: BUILD.bazel  parser.go
language/kotlin/tests/: BUILD.bazel
language/orion/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  builtin.go  config.go  configure.go  generate.go  go.mod  go.sum  host.go  resolver.go
language/orion/plugin/: BUILD.bazel  plugin.bzl.go  plugin.go  plugin.star.go  queries.go  queries.star.go  target.go  target.star.go
language/orion/plugins/: BUILD.bazel  bzl.axl  ext.axl.tmpl  kotlin.axl  maven.axl
language/orion/queries/: BUILD.bazel  ast.go  jq.go  queries.go  regex.go  yq.go
language/orion/starlark/: BUILD.bazel  eval.go
language/orion/starzelle/: BUILD.bazel  plugin.go  sdk.go
language/orion/tests/: BUILD.bazel
runner/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  def.bzl  go.mod  go.sum  main.go  runner.go
runner/git/: BUILD.bazel  gitignore.go
runner/git/testing/: BUILD.bazel  language.go
runner/language/bzl/: BUILD.bazel
runner/language/python/: BUILD.bazel
runner/patches/: bazelbuild_bazel-gazelle_aspect-watchman.patch
runner/pkg/git/: BUILD.bazel  gitignore_test.go
runner/pkg/ibp/: BUILD.bazel  client.go  protocol.go
runner/pkg/socket/: BUILD.bazel
runner/pkg/watchman/: BUILD.bazel  cache.go  cache_test.go  watch.go  watch_test.go
runner/progress/: BUILD.bazel  README.md  progress.go
runner/tests/: BUILD.bazel  test.go
runner/tests/bad_build/: BUILD.out  WORKSPACE  expectedStderr.txt
runner/tests/branded-directives/: BUILD.in  BUILD.out  WORKSPACE
runner/tests/crossresolve-js/: BUILD.in  BUILD.out  js-imported.axl  js-importing.axl
runner/tests/crossresolve-pnpm/: npm-importing.axl
runner/tests/crossresolve-pnpm-names/: BUILD.in  BUILD.out  WORKSPACE  npm-importing.axl  pnpm-lock.yaml
runner/tests/crossresolve-pnpm-names-lazy/: BUILD.out  WORKSPACE  arguments.txt  npm-importing.axl  package.json
runner/tests/imports-missing/: WORKSPACE  expectedStderr.txt  expectedStdout.txt
runner/tests/js_binary-main/: main.axl
runner/tests/npm_bin_wrapper/: BUILD.in  BUILD.out  pcss.axl
tools/format/: BUILD.bazel
(+605 files in other folders)
