load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "common",
    srcs = [
        "directives.go",
        "regex.go",
        "set.go",
        "walk.go",
        "worker.go",
    ],
    importpath = "github.com/aspect-build/aspect-gazelle/common",
    visibility = ["//visibility:public"],
    deps = [
        "//common/logger",
        "@com_github_emirpasic_gods//sets/treeset",
        "@com_github_emirpasic_gods//utils",
        "@gazelle//label",
        "@gazelle//rule",
        "@gazelle//walk",
    ],
)
