load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "common",
    srcs = [
        "directives.go",
        "regex.go",
        "set.go",
        "walk.go",
        "worker.go",
    ],
    importpath = "github.com/aspect-build/aspect-gazelle/common",
    visibility = ["//visibility:public"],
    deps = [
        "//common/logger",
        "@com_github_bazelbuild_buildtools//build",
        "@com_github_emirpasic_gods//sets/treeset",
        "@gazelle//label",
        "@gazelle//rule",
        "@gazelle//walk",
    ],
)

go_test(
    name = "common_test",
    srcs = ["set_test.go"],
    embed = [":common"],
    deps = [
        "@com_github_bazelbuild_buildtools//build",
        "@gazelle//label",
    ],
)
