load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "runner",
    srcs = ["runner.go"],
    importpath = "github.com/aspect-build/aspect-gazelle/runner",
    visibility = ["//visibility:public"],
    deps = [
        "//common/bazel",
        "//language/js",
        "//language/orion",
        "//runner/language/bzl",
        "//runner/language/python",
        "//runner/pkg/git",
        "//runner/pkg/ibp",
        "//runner/progress",
        "//runner/vendored/gazelle",
        "@gazelle//config",
        "@gazelle//language",
        "@gazelle//language/go",
        "@gazelle//language/proto",
        "@gazelle_cc//language/cc",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_x_term//:term",
    ],
)
