load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@rules_go//go:def.bzl", "go_library")

# Use the gazelle bazel modules instead of go.mod modules
# gazelle:resolve_regexp go github.com/bazelbuild/bazel-gazelle/(.*) @gazelle//$1
# gazelle:resolve_regexp go github.com/bazel-contrib/rules_python/gazelle/(.*) @rules_python_gazelle_plugin//$1
# gazelle:resolve_regexp go github.com/EngFlow/gazelle_cc/(.*) @gazelle_cc//$1
# gazelle:resolve_regexp go github.com/aspect-build/aspect-gazelle/common(/.*)? @aspect_gazelle//common$1
# gazelle:resolve_regexp go github.com/aspect-build/aspect-gazelle/language/js @aspect_gazelle_js
# gazelle:resolve_regexp go github.com/aspect-build/aspect-gazelle/language/orion @aspect_gazelle_orion
# gazelle:resolve_regexp go github.com/aspect-build/aspect-gazelle/language/kotlin @aspect_gazelle_kotlin
# gazelle:resolve_regexp go github.com/aspect-build/aspect-gazelle/runner/(.*) //$1

gazelle(
    name = "gazelle",
    extra_args = ["-index=lazy"],
    gazelle = "@aspect_gazelle//:gazelle_bin",
)

gazelle(
    name = "gazelle.check",
    gazelle = "@aspect_gazelle//:gazelle_bin",
    mode = "diff",
)

gazelle_binary(
    name = "gazelle_prebuilt_bin",
    languages = [
        "//language/bzl",
        "@rules_python_gazelle_plugin//python",
        "@aspect_gazelle_js",
        # Kotlin not included in the prebuild because it interferes with normal operation
        # and there is no directive to disable it.
        # "@aspect_gazelle_kotlin",
        "@aspect_gazelle_orion",
        "@gazelle_cc//language/cc",
        "@gazelle//language/proto",
        "@gazelle//language/go",
    ],
    visibility = ["//visibility:public"],
)

# Target name matching MODULE name
alias(
    name = "aspect_gazelle_runner",
    actual = ":runner",
    visibility = ["//visibility:public"],
)

go_library(
    name = "runner",
    srcs = ["runner.go"],
    importpath = "github.com/aspect-build/aspect-gazelle/runner",
    visibility = ["//visibility:public"],
    deps = [
        "//language/bzl",
        "//pkg/git",
        "//pkg/ibp",
        "//progress",
        "//vendored/gazelle",
        "@aspect_gazelle//common/bazel",
        "@aspect_gazelle_js",
        "@aspect_gazelle_orion",
        "@gazelle//config",
        "@gazelle//language",
        "@gazelle//language/go",
        "@gazelle//language/proto",
        "@gazelle_cc//language/cc",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_x_term//:term",
        "@rules_python_gazelle_plugin//python",
    ],
)
