load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "bazel",
    srcs = [
        "bazel.go",
        "bazelignore.go",
    ],
    importpath = "github.com/aspect-build/aspect-gazelle/common/bazel",
    visibility = ["//visibility:public"],
    deps = [
        "//common/bazel/workspace",
    ],
)
