load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cache",
    srcs = [
        "cache.go",
        "configurer.go",
        "disk.go",
        "noop.go",
        "watchman.go",
    ],
    importpath = "github.com/aspect-build/aspect-gazelle/common/cache",
    visibility = ["//visibility:public"],
    deps = [
        "//common/buildinfo",
        "//common/logger",
        "//common/watch",
        "@gazelle//config",
        "@gazelle//language",
        "@gazelle//rule",
    ],
)
