load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "progress",
    srcs = ["progress.go"],
    importpath = "github.com/aspect-build/aspect-gazelle/common/progress",
    visibility = ["//visibility:public"],
    deps = [
        "@gazelle//config",
        "@gazelle//label",
        "@gazelle//language",
        "@gazelle//repo",
        "@gazelle//resolve",
        "@gazelle//rule",
        "@org_golang_x_term//:term",
    ],
)
