load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "treesitter",
    srcs = [
        "filters.go",
        "parser.go",
        "queries.go",
        "query.go",
    ],
    importpath = "github.com/aspect-build/aspect-gazelle/common/treesitter",
    visibility = ["//visibility:public"],
    deps = [
        "//common",
        "//common/logger",
        "//common/treesitter/grammars/golang",
        "//common/treesitter/grammars/java",
        "//common/treesitter/grammars/json",
        "//common/treesitter/grammars/kotlin",
        "//common/treesitter/grammars/starlark",
        "//common/treesitter/grammars/tsx",
        "//common/treesitter/grammars/typescript",
        "@com_github_smacker_go_tree_sitter//:go-tree-sitter",
        "@com_github_smacker_go_tree_sitter//rust",
    ],
)
