load("@bazel_gazelle//:def.bzl", "gazelle_binary")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:exclude tests/

go_library(
    name = "host",
    srcs = [
        "builtin.go",
        "config.go",
        "configure.go",
        "generate.go",
        "host.go",
        "resolver.go",
    ],
    importpath = "github.com/aspect-build/orion/language/host",
    visibility = ["//visibility:public"],
    deps = [
        "//common",
        "//common/bazel/workspace",
        "//common/cache",
        "//common/logger",
        "//language/host/plugin",
        "//language/host/queries",
        "//language/host/starzelle",
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
        "@com_github_bmatcuk_doublestar_v4//:doublestar",
        "@com_github_emirpasic_gods//maps/linkedhashmap",
        "@com_github_emirpasic_gods//sets/treeset",
        "@org_golang_x_sync//errgroup",
    ],
)

# Internal only for tests
gazelle_binary(
    name = "gazelle_host_binary",
    testonly = True,
    languages = [
        ":host",
        "//runner/git/testing",
    ],
    visibility = ["//:__subpackages__"],
)
